@@ -942,7 +942,7 @@ class LinkDotFindVisitor final : public VNVisitor {
             // places such as tasks, where "task ...; begin ... end"
             // are common.
             for (AstNode* stmtp = nodep->stmtsp(); stmtp; stmtp = stmtp->nextp()) {
-                if (VN_IS(stmtp, Var)) {
+                if (VN_IS(stmtp, Var) || VN_IS(stmtp, Foreach)) {
                     ++m_modBlockNum;
                     nodep->name("unnamedblk" + cvtToStr(m_modBlockNum));
                     break;
