@@ -21,8 +21,9 @@ Verilator 4.219 devel
 * Fix $readmem file not found to be warning not error (#3310). [Alexander Grobman]
 * Fix class stringification on wide arrays (#3312). [Iru Cai]
 * Fix public function arguments that are arrayed (#3316). [pawel256]
-* Fix compile error with --trace-fst --sc (#3332). [leavinel]
+* Fix unnamedblk error on foreach (#3321). [Aliaksei Chapyzhenka]
 * Fix crash in recursive module inlining (#3324). [Larry Doolittle]
+* Fix compile error with --trace-fst --sc (#3332). [leavinel]
 
 
 Verilator 4.218 2022-01-17
